added code for cosine similarity calculations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "set": "cpp",
         "sstream": "cpp",
         "stack": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "pqxx": "cpp"
     }
 }
