enabled functionality to convert similarity scores to JSON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SOURCES
     src/dbHandler.cpp
     src/simCalculator.cpp
     src/mathFunctions.cpp
+    src/jsonConverter.cpp
 )
 add_compile_options(-Wno-unknown-attributes)
 
